# kygon_streaming

./: .clang-format  CMakeLists.txt  LICENSE
app/: CMakeLists.txt  main.cpp
src/app/: Authentication.qml  CMakeLists.txt  ChatManager.cpp  ChatManager.hpp  ServerSession.cpp  ServerSession.hpp  Session.cpp  Session.hpp  UiApplication.cpp  UiApplication.hpp  main.cpp  main.qml
src/app/qml/: ActiveUsers.qml  Authentication.qml  Chat.qml  LeftPanel.qml  MessageInput.qml  UserMessages.qml  main.qml
src/common/: Messenger.cpp  Messenger.hpp  Protocol.cpp  Protocol.hpp  UserDto.cpp  UserDto.hpp  Utils.hpp
src/server/: Application.cpp  Application.hpp  CMakeLists.txt  ClientSession.cpp  ClientSession.hpp  ClientsMediator.cpp  ClientsMediator.hpp  Session.cpp  Session.hpp  main.cpp
